syntax = "proto3";
package ujds.index.v1;
option go_package = "github.com/ashep/ujds/sdk/proto/ujds/index/v1";

message ListRequestFilter {
  repeated string names = 1;
}

message ListRequest {
  ListRequestFilter filter = 1;
}

message ListResponse {
  message Index {
    string name = 1;
    string title = 2;
  }

  repeated Index indices = 1;
}

message PushRequest {
  string name = 1;
  reserved 2; // deleted 'schema' field
  string title = 3;
}

message PushResponse {
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string name = 1;
  uint64 created_at = 2;
  uint64 updated_at = 3;
  reserved 4; // deleted 'schema' field
  string title = 5;
}

message ClearRequest {
  string name = 1;
}

message ClearResponse {
}

service IndexService {
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns(ListResponse) {}
  rpc Clear(ClearRequest) returns (ClearResponse) {}
}
